@@ -1,4 +1,3 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <metadata>
-  <version>2000</version>
 </metadata>
