@@ -4,7 +4,8 @@ Changelog
 2.6.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add registry setting for enabling/disabling indexing.
+  [buchi]
 
 
 2.6.2 (2019-09-12)
